--- a/fonts/firacode/firacode.css
+++ b/fonts/firacode/firacode.css
@@ -1,83 +1,83 @@
 @font-face {
   font-family: 'FiraCodeNerd';
-  src: url('FiraCodeNerdFont-Light.ttf') format('truetype');
+  src: url('FiraCodeNerdFont-Light.woff2') format('woff2'), url('FiraCodeNerdFont-Light.ttf') format('truetype');
   font-display: swap;
   font-weight: 200;
 }
 
 @font-face {
   font-family: 'FiraCodeNerd';
-  src: url('FiraCodeNerdFont-Medium.ttf') format('truetype');
+  src: url('FiraCodeNerdFont-Medium.woff2') format('woff2'), url('FiraCodeNerdFont-Medium.ttf') format('truetype');
   font-display: swap;
   font-weight: 300;
 }
 
 @font-face {
   font-family: 'FiraCodeNerd';
-  src: url('FiraCodeNerdFont-Retina.ttf') format('truetype');
+  src: url('FiraCodeNerdFont-Retina.woff2') format('woff2'), url('FiraCodeNerdFont-Retina.ttf') format('truetype');
   font-display: swap;
   font-weight: 400;
 }
 
 @font-face {
   font-family: 'FiraCodeNerd';
-  src: url('FiraCodeNerdFont-Regular.ttf') format('truetype');
+  src: url('FiraCodeNerdFont-Regular.woff2') format('woff2'), url('FiraCodeNerdFont-Regular.ttf') format('truetype');
   font-display: swap;
   font-weight: 500;
 }
 
 @font-face {
   font-family: 'FiraCodeNerd';
-  src: url('FiraCodeNerdFont-SemiBold.ttf') format('truetype');
+  src: url('FiraCodeNerdFont-SemiBold.woff2') format('woff2'), url('FiraCodeNerdFont-SemiBold.ttf') format('truetype');
   font-display: swap;
   font-weight: 600;
 }
 
 @font-face {
   font-family: 'FiraCodeNerd';
-  src: url('FiraCodeNerdFont-Bold.ttf') format('truetype');
+  src: url('FiraCodeNerdFont-Bold.woff2') format('woff2'), url('FiraCodeNerdFont-Bold.ttf') format('truetype');
   font-display: swap;
   font-weight: 700;
 }
 /* FiraCodeMono -- smaller icons */
 @font-face {
   font-family: 'FiraCodeNerdMono';
-  src: url('FiraCodeNerdFontMono-Light.ttf') format('truetype');
+  src: url('FiraCodeNerdFontMono-Light.woff2') format('woff2'), url('FiraCodeNerdFontMono-Light.ttf') format('truetype');
   font-display: swap;
   font-weight: 200;
 }
 
 @font-face {
   font-family: 'FiraCodeNerdMono';
-  src: url('FiraCodeNerdFontMono-Medium.ttf') format('truetype');
+  src: url('FiraCodeNerdFontMono-Medium.woff2') format('woff2'), url('FiraCodeNerdFontMono-Medium.ttf') format('truetype');
   font-display: swap;
   font-weight: 300;
 }
 
 @font-face {
   font-family: 'FiraCodeNerdMono';
-  src: url('FiraCodeNerdFontMono-Retina.ttf') format('truetype');
+  src: url('FiraCodeNerdFontMono-Retina.woff2') format('woff2'), url('FiraCodeNerdFontMono-Retina.ttf') format('truetype');
   font-display: swap;
   font-weight: 400;
 }
 
 @font-face {
   font-family: 'FiraCodeNerdMono';
-  src: url('FiraCodeNerdFontMono-Regular.ttf') format('truetype');
+  src: url('FiraCodeNerdFontMono-Regular.woff2') format('woff2'), url('FiraCodeNerdFontMono-Regular.ttf') format('truetype');
   font-display: swap;
   font-weight: 500;
 }
 
 @font-face {
   font-family: 'FiraCodeNerdMono';
-  src: url('FiraCodeNerdFontMono-SemiBold.ttf') format('truetype');
+  src: url('FiraCodeNerdFontMono-SemiBold.woff2') format('woff2'), url('FiraCodeNerdFontMono-SemiBold.ttf') format('truetype');
   font-display: swap;
   font-weight: 600;
 }
 
 @font-face {
   font-family: 'FiraCodeNerdMono';
-  src: url('FiraCodeNerdFontMono-Bold.ttf') format('truetype');
+  src: url('FiraCodeNerdFontMono-Bold.woff2') format('woff2'), url('FiraCodeNerdFontMono-Bold.ttf') format('truetype');
   font-display: swap;
   font-weight: 700;
 }
